--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     .icons img {
       width: 24px;
       height: 24px;
+      aspect-radio: 1/1;
+      object-fit: contain;
       margin: 0 4px;
     }
     /* Panel de comparación */
