--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <style>
     body {
       font-family: Lexend, sans-serif;
-      background-color: #ffffff;
+      /* Cambia el color de fondo por la imagen */
+      background-image: url('img/background.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
       color: #000000;
       margin: 0;
       padding: 20px;
