--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       /* Cambia el color de fondo por la imagen */
       background-image: url('img/background.jpg');
       background-size: cover;
+      aspect-radio: 1/1;
+      object-fit: contain;
       background-repeat: no-repeat;
       background-position: center center;
       color: #000000;
