--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       font-family: Lexend, sans-serif;
       /* Cambia el color de fondo por la imagen */
       background-image: url('img/background.jpg');
+      aspect-radio: 1/1;
       object-fit: contain;
       background-repeat: no-repeat;
       background-position: center center;
