--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
       background: #f2f2f2;
       border-radius: 10px;
       padding: 10px;
+      aspect-radio: 1/1;
+      object-fit: contain;
       text-align: center;
       transition: transform 0.2s;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
     .character-card:hover {
       transform: scale(1.05);
