--- a/team.html
+++ b/team.html
@@ -1,112 +1,74 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Crear tu equipo - Inazuma Eleven</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Crear tu Equipo</title>
   <style>
     body {
       font-family: Lexend, sans-serif;
       background-color: #ffffff;
-      color: #000;
+      color: #000000;
       margin: 0;
       padding: 20px;
     }
-
     h1 {
       text-align: center;
     }
-
-    .available-players, .team-formation {
-      margin-top: 30px;
+    .characters, .team-formation {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 20px;
+      margin-bottom: 40px;
     }
-
-    .character-card {
-      background: #f2f2f2;
+    .character-card, .team-slot {
+      background: #f0f0f0;
       border-radius: 10px;
       padding: 10px;
       text-align: center;
-      transition: transform 0.2s;
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     }
-
-    .character-card:hover {
-      transform: scale(1.05);
-      cursor: pointer;
-    }
-
-    .character-sprite {
+    img.character-sprite {
       width: 120px;
       height: 120px;
       object-fit: contain;
       display: block;
-      margin: 10px auto;
+      margin: 0 auto;
     }
-
     .character-name {
+      margin-top: 8px;
       font-weight: bold;
       font-size: 14px;
-      margin-bottom: 6px;
       text-transform: capitalize;
     }
-
     .icons img {
       width: 24px;
       height: 24px;
       margin: 0 4px;
     }
-
-    .available-players {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-      gap: 20px;
-    }
-
-    .team-formation {
-      margin-top: 40px;
-    }
-
-    #export-team {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      background-color: #333;
-      color: white;
-      cursor: pointer;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    #export-team:hover {
-      background-color: #555;
-    }
-
     button {
-      margin-top: 8px;
-      padding: 6px 10px;
-      font-size: 12px;
+      margin-top: 10px;
+      padding: 5px 10px;
+      font-size: 14px;
+      background-color: #d9534f;
+      color: white;
       border: none;
       border-radius: 6px;
-      background-color: #c0392b;
-      color: white;
       cursor: pointer;
     }
-
     button:hover {
-      background-color: #e74c3c;
+      background-color: #c9302c;
     }
   </style>
 </head>
 <body>
   <h1>Construye tu Equipo</h1>
 
-  <!-- ✅ Aquí está la línea requerida -->
-  <div class="available-players"></div>
-  <div class="team-formation"></div>
-  <button id="export-team">Exportar Equipo</button>
+  <h2>Jugadores Seleccionados (Máx 11)</h2>
+  <div class="team-formation" id="team-formation"></div>
+
+  <h2>Selecciona Personajes</h2>
+  <div class="characters" id="characters-container"></div>
 
   <script src="scripts/team.js"></script>
 </body>
